--- a/index.html
+++ b/index.html
@@ -2,48 +2,49 @@
 <html lang="uk">
 <head>
   <title>Web Studio</title>
+  <link rel="stylesheet" href="./css/styles.css" />
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
+  
 
-   
 </head>
 <body>
   <header>
 
     <nav>
-      <a>Web Studio</a>
-      <ul>
-
+      <a><span class="logo">Web</span>Studio</a>
+      <ul class="navigation">
        <li> <a href="Студія">Студія</a></li>
-       <li> <a href="Портфоліо">Портфоліо</a></li>
+       <li><a href="portfolio.html">Портфоліо</a></li>
        <li> <a href="Контакти">Контакти</a></li>
 
   </ul>
   </nav>
 
-<ul>
-   <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-  <li> <div class=phone><a href="tel:+380961111111">+38 096 111 11 11</a></div></li>
+<ul class="info">
+   <li> <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
+  <li> <div class=phone><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></div></li>
   </ul>
 
   </header>
 
 <main> 
-  <section> <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>  
+  <section> <h1 class="hero">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>  
 <button type="button">Замовити послугу</button>
 </section>
 
 <section>
 <h2>Наші переваги</h2>
 <ul>
- <li><h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-  <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p> </li>
-<li><h3> ПУНКТУАЛЬНІСТЬ</h3>
-  <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+ <li><h3 class="caption">УВАГА ДО ДЕТАЛЕЙ</h3>
+  <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p> </li>
+<li><h3 class="caption"> ПУНКТУАЛЬНІСТЬ</h3>
+  <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
 </li>
-<li><h3> ПЛАНУВАННЯ</h3>
-  Так само консультація з широким активом значною мірою зумовлює.
+<li><h3 class="caption"> ПЛАНУВАННЯ</h3>
+  <p class="text">Так само консультація з широким активом значною мірою зумовлює.
 </p></li>
-<li><h3> СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-  <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+<li><h3 class="caption"> СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+  <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.
 </p></li>
 </ul>
 
@@ -53,9 +54,9 @@
 <h2>Чим ми займаємося</h2>
 
 <ul>
-  <li><img src="komp.jpg" alt="людина що працює за комп'ютером" width="370" height="294"></li>
-  <li><img src="comp.jpg" alt="людина що працює за телефоном" width="370" height="294"></li>
-  <li><img src="box.jpg" alt="людина що працює за планшетом" width="370" height="294"></li>
+  <li><img src="images/komp.jpg" alt="людина що працює за комп'ютером" width="370" height="294"></li>
+  <li><img src="images/comp.jpg" alt="людина що працює за телефоном" width="370" height="294"></li>
+  <li><img src="images/box.jpg" alt="людина що працює за планшетом" width="370" height="294"></li>
 </ul>
 </section>
 
@@ -64,21 +65,21 @@
 <h2>Наша команда</h2>
 
 <ul>
-  <li><img src="port.jpg" alt=" Дизайнер продукту" width="270" height="260"><h3>Ігор Дем'яненко</h3><p>Designer</p></li>
-  <li><img src="portret.jpg" alt="программист приложения" width="270" height="260"><h3>Ольга Рєпіна</h3><p>Frontend Developer</p></li>
-  <li><img src="Marketing.jpg" alt="маркетинг " width="270" height="260"><h3>Микола Тарасов</h3><p>Marketing</p></li>
-  <li><img src="UIDesigner.jpg" alt="дизайнер" width="270" height="260"><h3>Михайло Єрмаков</h3><p>UI Designer</p></li>
+  <li><img src="images/port.jpg" alt=" Дизайнер продукту" width="270" height="260"><h3 class="name">Ігор Дем'яненко</h3><p class="job">Designer</p></li>
+  <li><img src="images/portret.jpg" alt="программист приложения" width="270" height="260"><h3 class="name">Ольга Рєпіна</h3><p class="job">Frontend Developer</p></li>
+  <li><img src="images/Marketing.jpg" alt="маркетинг " width="270" height="260"><h3 class="name">Микола Тарасов</h3><p class="job">Marketing</p></li>
+  <li><img src="images/UIDesigner.jpg" alt="дизайнер" width="270" height="260"><h3 class="name">Михайло Єрмаков</h3><p class="job">UI Designer</p></li>
 </ul>
 </section>
 </main>
 
 <footer>
-  <a>Web Studio</a> 
+  <a><span class="logo">Web</span>Studio</a>
   <address>
     <ul>
      <li><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv"> м. Київ, пр-т Лесі Українки, 26</a></li>
-    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-    <li><a href="tel:+380961111111">+38 096 111 11 11</a></a></li>
+    <li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
+    <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></a></li>
   </ul>
   </address>
 
