--- a/portfolio.html
+++ b/portfolio.html
@@ -4,15 +4,14 @@
   <title>Web Studio</title>
   <link rel="stylesheet" href="./css/styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
-   
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@900&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
 
     <nav>
-      <a><span class="logo">Web</span>Studio</a>
-      <ul>
-
+      <a class="fulllogo"><span class="logo">Web</span>Studio</a>
+      <ul class="navigation">
        <li> <a href="Студія">Студія</a></li>
        <li> <a href="Портфоліо">Портфоліо</a></li>
        <li> <a href="Контакти">Контакти</a></li>
@@ -21,8 +20,8 @@
   </nav>
   </header>
 <ul>
-   <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-  <li> <div class=phone><a href="tel:+380961111111">+38 096 111 11 11</a></div></li>
+   <li> <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
+  <li> <div class=phone><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></div></li>
   </ul>
 
   <section>
@@ -40,48 +39,48 @@
 
   
 <li>
-    <img src="images/Techcrack.jpg" alt="Techcrack">
+    <img src="images/Techcrack.jpg" alt="Techcrack" class="picture">
     <h1 class="title">Технокряк</h1>
     <p class="sing">Веб-сайт</p>
 </li>
 
-<li><img src="images/Poster.jpg" alt="Poster">
+<li><img src="images/Poster.jpg" alt="Poster" class="picture">
     <h1 class="title">Постер New Orlean vs Golden Star</h1>
     <p class="sing">Дизайн</p>
 </li>
 
 <li>
-    <img src="images/Seafood.jpg" alt="Seafood">
+    <img src="images/Seafood.jpg" alt="Seafood" class="picture">
     <h1 class="title">Ресторан Seafood</h1>
     <p class="sing">Додаток</p>
 </li>
 <li>
-    <img src="images/Prime.jpg" alt="Prime">
+    <img src="images/Prime.jpg" alt="Prime" class="picture">
     <h1 class="title">Проєкт Prime</h1>
     <p class="sing">Маркетинг</p>
 </li>
 <li>
-    <img src="images/Boxes.jpg" alt="Boxes">
+    <img src="images/Boxes.jpg" alt="Boxes" class="picture">
     <h1 class="title">Проєкт Boxes</h1>
     <p class="sing">Додаток</p>
 </li>
 <li>
-    <img src="images/Border.jpg" alt="Border">
+    <img src="images/Border.jpg" alt="Border" class="picture">
     <h1 class="title">Inspiration has no Borders</h1>
     <p class="sing">Веб-сайт</p>
 </li>
 <li>
-    <img src="images/Edition.jpg" alt="Edition">
+    <img src="images/Edition.jpg" alt="Edition" class="picture">
     <h1 class="title">Видання Limited Edition</h1>
     <p class="sing">Дизайн</p>
 </li>
 <li>
-    <img src="images/Lab.jpg" alt="Lab">
+    <img src="images/Lab.jpg" alt="Lab" class="picture">
     <h1 class="title">Проєкт LAB</h1>
     <p class="sing">Маркетинг</p>
 </li>
 <li>
-    <img src="images/Growing.jpg" alt="Growing">
+    <img src="images/Growing.jpg" alt="Growing" class="picture">
     <h1 class="title">Growing Business</h1>
     <p class="sing">Додаток</p>
 </li>
@@ -94,7 +93,7 @@
 
   <footer>
 
-    <a><span class="logo">Web</span>Studio</a>
+    <a class="fulllogo"><span class="logo">Web</span>Studio</a>
     <address>
       <ul>
        <li><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv"> м. Київ, пр-т Лесі Українки, 26</a></li>
