--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Web Studio</title>
   <link rel="stylesheet" href="./css/styles.css" />
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@900&display=swap" rel="stylesheet">
 
 </head>
@@ -51,7 +51,7 @@
 </section>
 
 <section>
-<h2>Чим ми займаємося</h2>
+<h2 class="maintitle">Чим ми займаємося</h2>
 
 <ul>
   <li><img src="images/komp.jpg" alt="людина що працює за комп'ютером" width="370" height="294"></li>
@@ -62,7 +62,7 @@
 
 
 <section>
-<h2>Наша команда</h2>
+<h2 class="maintitle">Наша команда</h2>
 
 <ul>
   <li><img src="images/port.jpg" alt=" Дизайнер продукту" width="270" height="260"><h3 class="name">Ігор Дем'яненко</h3><p class="job">Designer</p></li>
@@ -77,7 +77,7 @@
   <a class="fulllogo"><span class="logo">Web</span>Studio</a>
   <address>
     <ul>
-     <li><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv"> м. Київ, пр-т Лесі Українки, 26</a></li>
+     <li><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv" class="adress"> м. Київ, пр-т Лесі Українки, 26</a></li>
     <li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
     <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></a></li>
   </ul>
