--- a/portfolio.html
+++ b/portfolio.html
@@ -2,84 +2,92 @@
 <html lang="uk">
 <head>
   <title>Web Studio</title>
-  <link rel="stylesheet" href="./css/styles.css" />
+  
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@900&display=swap" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+<link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
   <header>
+    <a class="fulllogo"><span class="logo">Web</span>Studio</a>
+    <nav >
+      <ul  class="main-nav">
+       <li> <a href="Студія" class="itemmain">Студія</a></li>
+       <li><a href="portfolio.html" class="item">Портфоліо</a></li>
+       <li> <a href="Контакти" class="item">Контакти</a></li>
 
-    <nav>
-      <a class="fulllogo"><span class="logo">Web</span>Studio</a>
-      <ul class="navigation">
-       <li> <a href="Студія">Студія</a></li>
-       <li> <a href="Портфоліо">Портфоліо</a></li>
-       <li> <a href="Контакти">Контакти</a></li>
-
+      
   </ul>
   </nav>
-  </header>
-<ul>
-   <li> <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
-  <li> <div class=phone><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></div></li>
+   
+<ul class="item">
+  
+   <li class="item"> <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
+  <li class="item"> <div class="phone"><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></div></li>
+
   </ul>
 
-  <section>
-<ul>
-<li><button type="button">Усі</button></li>
-<li><button type="button">Веб-сайти</button></li>
-<li><button type="button">Додатки</button></li>
-<li><button type="button">Дизайн</button></li>
-<li><button type="button">Маркетинг</button></li>
+  </header>
+  </header>
+
+<ul class="buttons">
+<li ><button type="button">Усі</button></li>
+<li ><button type="button">Веб-сайти</button></li>
+<li ><button type="button">Додатки</button></li>
+<li ><button type="button">Дизайн</button></li>
+<li ><button type="button">Маркетинг</button></li>
 </ul>
 
 <main>
-<ul>
+
+
+<ul class="market">
 
 
   
-<li>
+<li class="galery">
     <img src="images/Techcrack.jpg" alt="Techcrack" class="picture">
     <h1 class="title">Технокряк</h1>
     <p class="sing">Веб-сайт</p>
 </li>
 
-<li><img src="images/Poster.jpg" alt="Poster" class="picture">
+<li class="galery"><img src="images/Poster.jpg" alt="Poster" class="picture">
     <h1 class="title">Постер New Orlean vs Golden Star</h1>
     <p class="sing">Дизайн</p>
 </li>
 
-<li>
+<li class="galery">
     <img src="images/Seafood.jpg" alt="Seafood" class="picture">
     <h1 class="title">Ресторан Seafood</h1>
     <p class="sing">Додаток</p>
 </li>
-<li>
+<li class="galery">
     <img src="images/Prime.jpg" alt="Prime" class="picture">
     <h1 class="title">Проєкт Prime</h1>
     <p class="sing">Маркетинг</p>
 </li>
-<li>
+<li class="galery">
     <img src="images/Boxes.jpg" alt="Boxes" class="picture">
     <h1 class="title">Проєкт Boxes</h1>
     <p class="sing">Додаток</p>
 </li>
-<li>
+<li class="galery">
     <img src="images/Border.jpg" alt="Border" class="picture">
     <h1 class="title">Inspiration has no Borders</h1>
     <p class="sing">Веб-сайт</p>
 </li>
-<li>
+<li class="galery">
     <img src="images/Edition.jpg" alt="Edition" class="picture">
     <h1 class="title">Видання Limited Edition</h1>
     <p class="sing">Дизайн</p>
 </li>
-<li>
+<li class="galery">
     <img src="images/Lab.jpg" alt="Lab" class="picture">
     <h1 class="title">Проєкт LAB</h1>
     <p class="sing">Маркетинг</p>
 </li>
-<li>
+<li class="galery">
     <img src="images/Growing.jpg" alt="Growing" class="picture">
     <h1 class="title">Growing Business</h1>
     <p class="sing">Додаток</p>
