--- a/index.html
+++ b/index.html
@@ -2,40 +2,46 @@
 <html lang="uk">
 <head>
   <title>Web Studio</title>
-  <link rel="stylesheet" href="./css/styles.css" />
+  
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@900&display=swap" rel="stylesheet">
-
+<link href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+<link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
   <header>
+    <a class="fulllogo"><span class="logo">Web</span>Studio</a>
+    <nav >
+      <ul  class="main-nav">
+       <li> <a href="Студія" class="itemmain">Студія</a></li>
+       <li><a href="portfolio.html" class="item">Портфоліо</a></li>
+       <li> <a href="Контакти" class="item">Контакти</a></li>
 
-    <nav>
-      <a class="fulllogo"><span class="logo">Web</span>Studio</a>
-      <ul class="navigation">
-       <li> <a href="Студія">Студія</a></li>
-       <li><a href="portfolio.html">Портфоліо</a></li>
-       <li> <a href="Контакти">Контакти</a></li>
-
+      
   </ul>
   </nav>
+   
+<ul class="item">
+  
+   <li class="item"> <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
+  <li class="item"> <div class="phone"><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></div></li>
 
-<ul class="info">
-   <li> <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
-  <li> <div class=phone><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></div></li>
   </ul>
 
   </header>
 
 <main> 
+
   <section> <h1 class="hero">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>  
 <button type="button">Замовити послугу</button>
+
 </section>
 
 <section>
-<h2>Наші переваги</h2>
-<ul>
- <li><h3 class="caption">УВАГА ДО ДЕТАЛЕЙ</h3>
+
+
+<ul class="write">
+ <li class="firstli"><h3 class="caption">УВАГА ДО ДЕТАЛЕЙ</h3>
   <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p> </li>
 <li><h3 class="caption"> ПУНКТУАЛЬНІСТЬ</h3>
   <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
@@ -51,29 +57,34 @@
 </section>
 
 <section>
+
 <h2 class="maintitle">Чим ми займаємося</h2>
 
-<ul>
-  <li><img src="images/komp.jpg" alt="людина що працює за комп'ютером" width="370" height="294"></li>
-  <li><img src="images/comp.jpg" alt="людина що працює за телефоном" width="370" height="294"></li>
-  <li><img src="images/box.jpg" alt="людина що працює за планшетом" width="370" height="294"></li>
+<ul class="Foto">
+  <li class="Fotomain"><img src="images/komp.jpg" alt="людина що працює за комп'ютером" width="370" height="294"></li>
+  <li class="Foto"><img src="images/comp.jpg" alt="людина що працює за телефоном" width="370" height="294"></li>
+  <li class="Foto"><img src="images/box.jpg" alt="людина що працює за планшетом" width="370" height="294"></li>
 </ul>
+
 </section>
 
 
 <section>
+  <div class="container">
 <h2 class="maintitle">Наша команда</h2>
 
-<ul>
-  <li><img src="images/port.jpg" alt=" Дизайнер продукту" width="270" height="260"><h3 class="name">Ігор Дем'яненко</h3><p class="job">Designer</p></li>
-  <li><img src="images/portret.jpg" alt="программист приложения" width="270" height="260"><h3 class="name">Ольга Рєпіна</h3><p class="job">Frontend Developer</p></li>
-  <li><img src="images/Marketing.jpg" alt="маркетинг " width="270" height="260"><h3 class="name">Микола Тарасов</h3><p class="job">Marketing</p></li>
-  <li><img src="images/UIDesigner.jpg" alt="дизайнер" width="270" height="260"><h3 class="name">Михайло Єрмаков</h3><p class="job">UI Designer</p></li>
+<ul class="team">
+  <li class="elementmain"><img src="images/port.jpg" alt=" Дизайнер продукту" width="270" height="260"><h3 class="name">Ігор Дем'яненко</h3><p class="job">Designer</p></li>
+  <li class="element"><img src="images/portret.jpg" alt="программист приложения" width="270" height="260"><h3 class="name">Ольга Рєпіна</h3><p class="job">Frontend Developer</p></li>
+  <li class="element"><img src="images/Marketing.jpg" alt="маркетинг " width="270" height="260"><h3 class="name">Микола Тарасов</h3><p class="job">Marketing</p></li>
+  <li class="element"><img src="images/UIDesigner.jpg" alt="дизайнер" width="270" height="260"><h3 class="name">Михайло Єрмаков</h3><p class="job">UI Designer</p></li>
 </ul>
+
 </section>
 </main>
 
 <footer>
+  <div class="container">
   <a class="fulllogo"><span class="logo">Web</span>Studio</a>
   <address>
     <ul>
