--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="uk">
 <head>
   <title>Web Studio</title>
-  
+<link href="./css/normalize.css">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@900&display=swap" rel="stylesheet">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
 <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
   <header>
+
     <a class="fulllogo"><span class="logo">Web</span>Studio</a>
     <nav >
       <ul  class="main-nav">
@@ -20,26 +20,27 @@
       
   </ul>
   </nav>
-   
+
+
 <ul class="item">
   
    <li class="item"> <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
   <li class="item"> <div class="phone"><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></div></li>
 
   </ul>
-
+</div>
   </header>
 
 <main> 
 
-  <section> <h1 class="hero">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>  
+  <section > <h1 class="hero">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>  
 <button type="button">Замовити послугу</button>
 
 </section>
 
 <section>
 
-
+  
 <ul class="write">
  <li class="firstli"><h3 class="caption">УВАГА ДО ДЕТАЛЕЙ</h3>
   <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p> </li>
@@ -70,7 +71,7 @@
 
 
 <section>
-  <div class="container">
+
 <h2 class="maintitle">Наша команда</h2>
 
 <ul class="team">
@@ -84,7 +85,7 @@
 </main>
 
 <footer>
-  <div class="container">
+<div>
   <a class="fulllogo"><span class="logo">Web</span>Studio</a>
   <address>
     <ul>
@@ -92,6 +93,7 @@
     <li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
     <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></a></li>
   </ul>
+</div>
   </address>
 
 
