--- a/portfolio.html
+++ b/portfolio.html
@@ -31,12 +31,12 @@
   </header>
   </header>
 
-<ul class="buttons">
-<li ><button type="button">Усі</button></li>
-<li ><button type="button">Веб-сайти</button></li>
-<li ><button type="button">Додатки</button></li>
-<li ><button type="button">Дизайн</button></li>
-<li ><button type="button">Маркетинг</button></li>
+<ul class="buttonmain">
+<li><button type="button" class="buttonportfoliomain">Усі</button></li>
+<li><button type="button" class="buttonportfolio">Веб-сайти</button></li>
+<li><button type="button" class="buttonportfolio">Додатки</button></li>
+<li><button type="button" class="buttonportfolio">Дизайн</button></li>
+<li ><button type="button" class="buttonportfolio">Маркетинг</button></li>
 </ul>
 
 <main>
