--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <header>
+    <section class="container">
     <a class="fulllogo"><span class="logo">Web</span>Studio</a>
     <nav >
       <ul  class="main-nav">
@@ -27,10 +28,10 @@
   <li class="item"> <div class="phone"><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></div></li>
 
   </ul>
-
+</section>
   </header>
-  </header>
 
+  <section class="container">
 <ul class="buttonmain">
 <li><button type="button" class="buttonportfoliomain">Усі</button></li>
 <li><button type="button" class="buttonportfolio">Веб-сайти</button></li>
@@ -38,10 +39,10 @@
 <li><button type="button" class="buttonportfolio">Дизайн</button></li>
 <li ><button type="button" class="buttonportfolio">Маркетинг</button></li>
 </ul>
-
+</section>
 <main>
 
-
+  <section class="container-elements">
 <ul class="market">
 
 
@@ -94,13 +95,13 @@
 </li>
     </ul>
 
-
+  </section>
 </main>
 
 
 
   <footer>
-
+    <section class="container">
     <a class="fulllogo"><span class="logo">Web</span>Studio</a>
     <address>
       <ul>
@@ -109,7 +110,7 @@
       <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
     </ul>
     </address>
-
+    </section>
   </footer>
 </section>
   
