--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="uk">
 <head>
   <title>Web Studio</title>
-<link href="./css/normalize.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
   <header>
-
+    <section class="container">
     <a class="fulllogo"><span class="logo">Web</span>Studio</a>
     <nav >
       <ul  class="main-nav">
@@ -20,8 +20,7 @@
       
   </ul>
   </nav>
-
-
+    
 <ul class="item">
   
    <li class="item"> <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
@@ -30,16 +29,16 @@
   </ul>
 </div>
   </header>
-
+</section>
 <main> 
-
-  <section > <h1 class="hero">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>  
-<button type="button">Замовити послугу</button>
+  <section class="container">
+   <h1 class="hero">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>  
+<button type="button" class="button-hero">Замовити послугу</button>    
 
 </section>
 
-<section>
-
+<section class="container">
+  
   
 <ul class="write">
  <li class="firstli"><h3 class="caption">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -57,7 +56,7 @@
 
 </section>
 
-<section>
+<section class="container">
 
 <h2 class="maintitle">Чим ми займаємося</h2>
 
@@ -70,7 +69,7 @@
 </section>
 
 
-<section>
+<section class="container">
 
 <h2 class="maintitle">Наша команда</h2>
 
@@ -85,6 +84,7 @@
 </main>
 
 <footer>
+  <section class="container">
 <div>
   <a class="fulllogo"><span class="logo">Web</span>Studio</a>
   <address>
@@ -96,7 +96,7 @@
 </div>
   </address>
 
-
+  </section>
 </footer>
 
 
