--- a/index.html
+++ b/index.html
@@ -9,35 +9,35 @@
 </head>
 <body>
   <header>
-    <section class="container">
+    <section>
+      <div class="container">
     <a class="fulllogo"><span class="logo">Web</span>Studio</a>
     <nav >
       <ul  class="main-nav">
-       <li> <a href="Студія" class="itemmain">Студія</a></li>
-       <li><a href="portfolio.html" class="item">Портфоліо</a></li>
-       <li> <a href="Контакти" class="item">Контакти</a></li>
+       <li class="itemmain"> <a href="Студія">Студія</a></li>
+       <li class="item"><a href="portfolio.html">Портфоліо</a></li>
+       <li class="item"> <a href="Контакти" >Контакти</a></li>
 
-      
+       <li class="item"> <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
+       <li class="item"> <div class="phone"><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></div></li>
+
   </ul>
   </nav>
-    
-<ul class="item">
-  
-   <li class="item"> <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
-  <li class="item"> <div class="phone"><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></div></li>
-
-  </ul>
 </div>
   </header>
+
 </section>
+
 <main> 
-  <section class="container">
+  <section>
+    <div class="container-hero">
    <h1 class="hero">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>  
 <button type="button" class="button-hero">Замовити послугу</button>    
-
+</div>
 </section>
 
-<section class="container">
+<section>
+  <div class="container">
   
   
 <ul class="write">
@@ -53,10 +53,11 @@
   <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.
 </p></li>
 </ul>
-
+</div>
 </section>
 
-<section class="container">
+<section>
+  <div class="container">
 
 <h2 class="maintitle">Чим ми займаємося</h2>
 
@@ -65,11 +66,12 @@
   <li class="Foto"><img src="images/comp.jpg" alt="людина що працює за телефоном" width="370" height="294"></li>
   <li class="Foto"><img src="images/box.jpg" alt="людина що працює за планшетом" width="370" height="294"></li>
 </ul>
-
+</div>
 </section>
 
 
-<section class="container">
+<section>
+  <div class="container">
 
 <h2 class="maintitle">Наша команда</h2>
 
@@ -79,13 +81,13 @@
   <li class="element"><img src="images/Marketing.jpg" alt="маркетинг " width="270" height="260"><h3 class="name">Микола Тарасов</h3><p class="job">Marketing</p></li>
   <li class="element"><img src="images/UIDesigner.jpg" alt="дизайнер" width="270" height="260"><h3 class="name">Михайло Єрмаков</h3><p class="job">UI Designer</p></li>
 </ul>
-
+</div>
 </section>
 </main>
 
 <footer>
-  <section class="container">
-<div>
+  <section>
+<div class="container">
   <a class="fulllogo"><span class="logo">Web</span>Studio</a>
   <address>
     <ul>
@@ -98,7 +100,6 @@
 
   </section>
 </footer>
-
 
 </body>
 </html>
