--- a/portfolio.html
+++ b/portfolio.html
@@ -10,25 +10,25 @@
 </head>
 <body>
   <header>
-    <section class="container">
+    <section>
+      <div class="container">
     <a class="fulllogo"><span class="logo">Web</span>Studio</a>
     <nav >
       <ul  class="main-nav">
-       <li> <a href="Студія" class="itemmain">Студія</a></li>
-       <li><a href="portfolio.html" class="item">Портфоліо</a></li>
-       <li> <a href="Контакти" class="item">Контакти</a></li>
+       <li class="itemmain"> <a href="Студія">Студія</a></li>
+       <li class="item"><a href="portfolio.html">Портфоліо</a></li>
+       <li class="item"> <a href="Контакти" >Контакти</a></li>
 
-      
+       <li class="item"> <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
+       <li class="item"> <div class="phone"><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></div></li>
+
   </ul>
   </nav>
-   
-<ul class="item">
-  
-   <li class="item"> <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
-  <li class="item"> <div class="phone"><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></div></li>
+</div>
+  </header>
 
-  </ul>
 </section>
+
   </header>
 
   <section class="container">
