--- a/index.html
+++ b/index.html
@@ -10,39 +10,41 @@
 <body>
   <header>
     <section>
-      <div class="container">
+      <div class="container-head">
     <a class="fulllogo"><span class="logo">Web</span>Studio</a>
-    <nav >
+    <nav>
+
       <ul  class="main-nav">
        <li class="itemmain"> <a href="Студія">Студія</a></li>
        <li class="item"><a href="portfolio.html">Портфоліо</a></li>
        <li class="item"> <a href="Контакти" >Контакти</a></li>
 
-       <li class="item"> <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
-       <li class="item"> <div class="phone"><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></div></li>
-
   </ul>
   </nav>
+  <ul class="container-head">
+    <li class="item"> <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
+       <li class="item"><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
+  </ul> 
+
 </div>
   </header>
-
 </section>
 
 <main> 
   <section>
     <div class="container-hero">
-   <h1 class="hero">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>  
-<button type="button" class="button-hero">Замовити послугу</button>    
+   <h1 class="herotext">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>  
+<button type="button" class="button-target">Замовити послугу</button>    
 </div>
 </section>
 
 <section>
-  <div class="container">
+  <div class="container-text">
   
   
 <ul class="write">
  <li class="firstli"><h3 class="caption">УВАГА ДО ДЕТАЛЕЙ</h3>
-  <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p> </li>
+  <p class="text -first">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p> </li>
 <li><h3 class="caption"> ПУНКТУАЛЬНІСТЬ</h3>
   <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
 </li>
@@ -57,23 +59,23 @@
 </section>
 
 <section>
-  <div class="container">
+  <div class="container information">
 
 <h2 class="maintitle">Чим ми займаємося</h2>
 
-<ul class="Foto">
-  <li class="Fotomain"><img src="images/komp.jpg" alt="людина що працює за комп'ютером" width="370" height="294"></li>
-  <li class="Foto"><img src="images/comp.jpg" alt="людина що працює за телефоном" width="370" height="294"></li>
-  <li class="Foto"><img src="images/box.jpg" alt="людина що працює за планшетом" width="370" height="294"></li>
+<ul class="foto">
+  <li class="fotomain"><img src="images/komp.jpg" alt="людина що працює за комп'ютером" width="370" height="294"></li>
+  <li class="foto"><img src="images/comp.jpg" alt="людина що працює за телефоном" width="370" height="294"></li>
+  <li class="foto"><img src="images/box.jpg" alt="людина що працює за планшетом" width="370" height="294"></li>
 </ul>
 </div>
 </section>
 
 
 <section>
-  <div class="container">
+  <div class="container-squad">
 
-<h2 class="maintitle">Наша команда</h2>
+<h2 class="maintitle squadt">Наша команда</h2>
 
 <ul class="team">
   <li class="elementmain"><img src="images/port.jpg" alt=" Дизайнер продукту" width="270" height="260"><h3 class="name">Ігор Дем'яненко</h3><p class="job">Designer</p></li>
@@ -87,12 +89,12 @@
 
 <footer>
   <section>
-<div class="container">
+<div class="container-f">
   <a class="fulllogo"><span class="logo">Web</span>Studio</a>
   <address>
     <ul>
      <li><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv" class="adress"> м. Київ, пр-т Лесі Українки, 26</a></li>
-    <li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
+    <li><a href="mailto:info@devstudio.com" class="mail foot">info@devstudio.com</a></li>
     <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></a></li>
   </ul>
 </div>
