--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
        <li class="item"> <a href="Контакти" >Контакти</a></li>
 
        <li class="item"> <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
-       <li class="item"> <div class="phone"><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></div></li>
+       <li class="item"><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
 
   </ul>
   </nav>
