--- a/portfolio.html
+++ b/portfolio.html
@@ -2,36 +2,39 @@
 <html lang="uk">
 <head>
   <title>Web Studio</title>
-  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@900&display=swap" rel="stylesheet">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
 <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
   <header>
     <section>
-      <div class="container">
+      <div class="container-head">
     <a class="fulllogo"><span class="logo">Web</span>Studio</a>
-    <nav >
+    <nav>
+
       <ul  class="main-nav">
        <li class="itemmain"> <a href="Студія">Студія</a></li>
        <li class="item"><a href="portfolio.html">Портфоліо</a></li>
        <li class="item"> <a href="Контакти" >Контакти</a></li>
 
-       <li class="item"> <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
-       <li class="item"><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
-
   </ul>
   </nav>
+  <ul class="container-head">
+    <li class="item"> <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
+       <li class="item"><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
+  </ul> 
+
 </div>
   </header>
 
 </section>
 
-  </header>
+  
 
-  <section class="container">
+  <section >
+    
 <ul class="buttonmain">
 <li><button type="button" class="buttonportfoliomain">Усі</button></li>
 <li><button type="button" class="buttonportfolio">Веб-сайти</button></li>
@@ -43,6 +46,7 @@
 <main>
 
   <section class="container-elements">
+    <div class="middle">
 <ul class="market">
 
 
@@ -94,24 +98,29 @@
     <p class="sing">Додаток</p>
 </li>
     </ul>
-
+  </div>
   </section>
 </main>
 
 
 
-  <footer>
-    <section class="container">
-    <a class="fulllogo"><span class="logo">Web</span>Studio</a>
-    <address>
-      <ul>
-       <li><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv" class="adress"> м. Київ, пр-т Лесі Українки, 26</a></li>
-      <li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
-    </ul>
-    </address>
-    </section>
-  </footer>
+<footer>
+  <section>
+<div class="container-f">
+  <a class="flogo"><span class="logo">Web</span>Studio</a>
+  <address>
+    <div class="footerinfo">
+    <ul>
+     <li><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv" class="adressf"> м. Київ, пр-т Лесі Українки, 26</a></li>
+    <li><a href="mailto:info@devstudio.com" class="mail foot">info@devstudio.com</a></li>
+    <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></a></li>
+  </ul>
+</div>
+</div>
+  </address>
+
+  </section>
+</footer>
 </section>
   
   </body>
