--- a/index.html
+++ b/index.html
@@ -90,9 +90,13 @@
 <footer>
   <section>
 <div class="container-f">
-  <a class="flogo"><span class="logo">Web</span>Studio</a>
+  
   <address>
+<div class="logname">
+    <a class="flogo"><span class="logo">Web</span><span class="studio">Studio</span> </a>
+    </div>
     <div class="footerinfo">
+    
     <ul>
      <li><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv" class="adressf"> м. Київ, пр-т Лесі Українки, 26</a></li>
     <li><a href="mailto:info@devstudio.com" class="mail foot">info@devstudio.com</a></li>
