--- a/portfolio.html
+++ b/portfolio.html
@@ -107,7 +107,7 @@
 <footer>
   <section>
 <div class="container-f">
-  <a class="flogo"><span class="logo">Web</span>Studio</a>
+  <a class="flogo"><span class="logo">Web</span><span class="studio">Studio</span> </a>
   <address>
     <div class="footerinfo">
     <ul>
