--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <section>
-      <div class="container-head">
+      <div class="container vartex">
     <a class="fulllogo"><span class="logo">Web</span>Studio</a>
     <nav>
 
@@ -21,7 +21,7 @@
 
   </ul>
   </nav>
-  <ul class="container-head">
+  <ul class="container vartex">
     <li class="item"> <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
        <li class="item"><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
   </ul> 
@@ -32,14 +32,14 @@
 
 <main> 
   <section>
-    <div class="container-hero">
+    <div class="container foundation">
    <h1 class="herotext">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>  
 <button type="button" class="button-target">Замовити послугу</button>    
 </div>
 </section>
 
 <section>
-  <div class="container-text">
+  <div class="container version">
   
   
 <ul class="write">
@@ -73,7 +73,7 @@
 
 
 <section>
-  <div class="container-squad">
+  <div class="container brigade">
 
 <h2 class="maintitle squadt">Наша команда</h2>
 
@@ -89,7 +89,7 @@
 
 <footer>
   <section>
-<div class="container-f">
+<div class="container bottom">
   
   <address>
 <div class="logname">
