--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <section>
-      <div class="container-head">
+      <div class="container vartex">
     <a class="fulllogo"><span class="logo">Web</span>Studio</a>
     <nav>
 
@@ -21,7 +21,7 @@
 
   </ul>
   </nav>
-  <ul class="container-head">
+  <ul class="container vartex">
     <li class="item"> <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
        <li class="item"><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
   </ul> 
@@ -45,7 +45,7 @@
 </section>
 <main>
 
-  <section class="container-elements">
+  <section class="container thing">
     <div class="middle">
 <ul class="market">
 
@@ -106,7 +106,7 @@
 
 <footer>
   <section>
-<div class="container-f">
+<div class="container bottom">
   <a class="flogo"><span class="logo">Web</span><span class="studio">Studio</span> </a>
   <address>
     <div class="footerinfo">
